<resources>
    <!-- titles -->
    <string name="app_name">Calculator</string>

    <!-- buttons -->
    <string name="calc_button_1" translatable="false">1</string>
    <string name="calc_button_2" translatable="false">2</string>
    <string name="calc_button_3" translatable="false">3</string>
    <string name="calc_button_4" translatable="false">4</string>
    <string name="calc_button_5" translatable="false">5</string>
    <string name="calc_button_6" translatable="false">6</string>
    <string name="calc_button_7" translatable="false">7</string>
    <string name="calc_button_8" translatable="false">8</string>
    <string name="calc_button_9" translatable="false">9</string>
    <string name="calc_button_0" translatable="false">0</string>
    <string name="calc_button_plus" translatable="false">+</string>
    <string name="calc_button_minus" translatable="false">−</string>
    <string name="calc_button_brackets" translatable="false">( )</string>
    <string name="calc_button_equ" translatable="false">=</string>
    <string name="calc_button_mult" translatable="false">×</string>
    <string name="calc_button_div" translatable="false">÷</string>
    <string name="calc_button_root" translatable="false">√</string>
    <string name="calc_button_coma" translatable="false">,</string>
    <string name="calc_button_inverse" translatable="false">+/−</string>
    <string name="calc_button_clear" translatable="false">C</string>
    <string name="calc_button_sin" translatable="false">sin</string>
    <string name="calc_button_cos" translatable="false">cos</string>
    <string name="calc_button_tan" translatable="false">tan</string>
    <string name="calc_button_ln" translatable="false">ln</string>
    <string name="calc_button_log" translatable="false">log</string>
    <string name="calc_button_pow_minus_1" translatable="false">1/x</string>
    <string name="calc_button_e_pow_x" translatable="false">eˣ</string>
    <string name="calc_button_x_pow_2" translatable="false">x²</string>
    <string name="calc_button_x_pow_y" translatable="false">xʸ</string>
    <string name="calc_button_pi" translatable="false">π</string>
    <string name="calc_button_abs" translatable="false">|x|</string>
    <string name="calc_button_e" translatable="false">e</string>
    <string name="calc_button_percent" translatable="false">%</string>
    <string name="calc_button_unit_rad">Rad</string>
    <string name="calc_button_unit_deg">Deg</string>
    <string name="button_clear_history">Clear history</string>

    <!-- symbols -->
    <string name="calc_1" translatable="false">1</string>
    <string name="calc_2" translatable="false">2</string>
    <string name="calc_3" translatable="false">3</string>
    <string name="calc_4" translatable="false">4</string>
    <string name="calc_5" translatable="false">5</string>
    <string name="calc_6" translatable="false">6</string>
    <string name="calc_7" translatable="false">7</string>
    <string name="calc_8" translatable="false">8</string>
    <string name="calc_9" translatable="false">9</string>
    <string name="calc_0" translatable="false">0</string>
    <string name="calc_plus" translatable="false">+</string>
    <string name="calc_minus" translatable="false">−</string>
    <string name="calc_bracket_open" translatable="false">(</string>
    <string name="calc_bracket_close" translatable="false">)</string>
    <string name="calc_equ" translatable="false">=</string>
    <string name="calc_mult" translatable="false">×</string>
    <string name="calc_div" translatable="false">÷</string>
    <string name="calc_root" translatable="false">√(</string>
    <string name="calc_coma" translatable="false">,</string>
    <string name="calc_sin" translatable="false">sin(</string>
    <string name="calc_cos" translatable="false">cos(</string>
    <string name="calc_tan" translatable="false">tan(</string>
    <string name="calc_ln" translatable="false">ln(</string>
    <string name="calc_log" translatable="false">log(</string>
    <string name="calc_pow" translatable="false">^(</string>
    <string name="calc_pi" translatable="false">π</string>
    <string name="calc_abs" translatable="false">abs(</string>
    <string name="calc_e" translatable="false">e</string>
    <string name="calc_percent" translatable="false">%</string>

    <!-- messages -->
    <string name="not_implemented">Not implemented</string>
    <string name="can_not_raise">Can\'t be raised</string>
    <string name="not_valid_text">Incorrect formatted text</string>
    <string name="can_not_calculate">Can\'t be calculated. Recheck the expression</string>

</resources>
